contactMe and sizing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -385,103 +385,12 @@
     </div>
   </div>
 </section>
-<section class="contact" id="contact">
-  <div class="max-width">
-    <h2 class="section__title">Contact Me</h2>
-    <span class="section__subtitle">Get in touch</span>
-    <div class="contact__container container grid">
-      <div>
-        <div class="contact__information">
-          <i
-            ><img
-              src="../assets/icons/phone.svg"
-              alt="icono phone"
-              class="contact__icon"
-          /></i>
-          <div>
-            <h3 class="contact__title">Call Me</h3>
-            <span class="contact__subtitle">+54 9 11 2257-1433</span>
-          </div>
-        </div>
-        <div class="contact__information">
-          <i
-            ><img
-              src="../assets/icons/envelope.svg"
-              alt="icono email"
-              class="contact__icon"
-          /></i>
-          <div>
-            <h3 class="contact__title">Email</h3>
-            <span class="contact__subtitle">contact@lodolatomas.com.ar</span>
-          </div>
-        </div>
-        <div class="contact__information">
-          <i
-            ><img
-              src="../assets/icons/location-point.svg"
-              alt="icono ubicacion"
-              class="contact__icon"
-          /></i>
-          <div>
-            <h3 class="contact__title">Location</h3>
-            <span class="contact__subtitle">CABA - Argentina</span>
-          </div>
-        </div>
-      </div>
-      <form action="" class="contact__form grid">
-        <div class="contact__inputs grid">
-          <div class="contact__content">
-            <label for="name" class="contact__label">Name</label>
-            <input type="text" class="contact__input" name="name" id="name" />
-          </div>
-          <div class="contact__content">
-            <label for="email" class="contact__label">Email</label>
-            <input
-              type="email"
-              class="contact__input"
-              name="email"
-              id="email"
-            />
-          </div>
-          <div class="contact__content">
-            <label for="project" class="contact__label">Project</label>
-            <input
-              type="text"
-              class="contact__input"
-              name="project"
-              id="project"
-            />
-          </div>
-          <div class="contact__content">
-            <label for="message" class="contact__label">Message</label>
-            <textarea
-              name="message"
-              id="message"git 
-              cols="0"
-              rows="7"
-              class="contact__input resizeNone"
-            ></textarea>
-          </div>
-          <div>
-            <a href="" class="contact__form-button button--flex">
-              <p>Send Message</p>
-              <i class="button__icon"
-                ><img
-                  src="../assets/icons/message.svg"
-                  alt=""
-                  class="contact__form-icon"
-              /></i>
-            </a>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</section> -->
+ -->
 <app-header></app-header>
 <app-home></app-home>
 <app-about></app-about>
 <app-skills></app-skills>
+<app-contact></app-contact>
 <router-outlet></router-outlet>
 <!-- 
           <p>
