--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -18,12 +18,21 @@ li {
   @include breakpoint-down(large) {
     left: -5px;
     transform: rotate(90deg);
+    .prev{
+      transform: rotate(270deg);
+    }
+    .next{
+      transform: rotate(90deg);
+    }
     top: -61px;
     height: 210px;
   }
   @include breakpoint-down(medium) {
     left: 98px;
     transform: rotate(0deg);
+    .prev{
+      transform: rotate(0deg);
+    }
     top: 28px;
     height: 210px;
   }
