--- a/src/app/shared/components/about/about.component.scss
+++ b/src/app/shared/components/about/about.component.scss
@@ -1,21 +1,22 @@
 @import "/src/styles.scss";
 .about {
   color: $color-secondary;
+  padding-top: 100px;
   &__title {
     z-index: -1;
     font-size: $big-font-size;
     text-align: center;
     position: relative;
     margin-bottom: 60px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     &::before {
       z-index: -1;
       content: "";
       position: absolute;
       left: 50%;
-      bottom: 0;
+      bottom: -11px;
       background: #fff;
-      width: 150px;
+      width: 220px;
       height: 3px;
       transform: translateX(-50%);
     }
@@ -24,10 +25,10 @@
       content: "who I am";
       position: absolute;
       font-weight: $font-weight-Regular;
-      font-size: $h3-font-size;
+      font-size: $h2-font-size;
       color: $color-primary;
       background: $background-color;
-      bottom: -8px;
+      bottom: -20px;
       left: 50%;
       padding: 0 5px;
       transform: translateX(-50%);
@@ -43,7 +44,7 @@
   }
   &__column {
     &-left {
-      max-width: 400px;
+      max-width: 450px;
       @include breakpoint-up(medium) {
         padding: 20px;
       }
@@ -57,8 +58,11 @@
       }
     }
     &-right {
-      max-width: 500px;
-      font-weight: $font-weight-Light;
+      max-width: 550px;
+      font-weight: $font-weight-Regular;
+      &-title{
+        font-size: $h2-font-size;
+      }
       font-size: $h3-font-size;
       display: flex;
       flex-wrap: wrap;
@@ -69,8 +73,8 @@
       }
       & span {
         color: $color-primary;
-        font-weight: $font-weight-Regular;
-        font-size: $h3-font-size;
+        font-weight: $font-weight-Medium;
+        font-size: $h1-font-size;
       }
       p,
       span {
@@ -82,7 +86,7 @@
   &__btns {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-top: 0.5rem;
   }
 }
