--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -15,7 +15,6 @@
   &__logo {
     p {
       font-weight: $font-weight-Bold;
-      font-size: $h1-font-size;
       span {
         color: $color-primary;
       }
@@ -52,7 +51,6 @@
   &__links {
     a {
       position: relative;
-      font-size: $small-font-size;
       color: $color-secondary;
       &:not(:last-child) {
         margin-right: 2rem;
@@ -93,6 +91,22 @@
       display: block;
       text-align: center;
     }
+  }
+}
+@include breakpoint-up(xlarge) {
+  .header__logo {
+    font-size: $big-font-size;
+  }
+  .header__links {
+    font-size: $h2-font-size;
+  }
+}
+@include breakpoint-down(xlarge) {
+  .header__logo {
+    font-size: $big-font-size;
+  }
+  .header__links {
+    font-size: $h3-font-size;
   }
 }
 
