--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -39,12 +39,40 @@
         padding: 5px 0;
       }
     }
+    @include breakpoint-up(xlarge) {
+      .text-1 {
+        font-size: $big-font-size;
+      }
+      .text-2 {
+        font-size: $very-big-font-size;
+      }
+      .text-3 {
+        font-size: $big-font-size;
+        & span {
+          font-size: $very-big-font-size;
+        }
+      }
+    }
+    @include breakpoint-down(xlarge) {
+      .text-1 {
+        font-size: $h1-font-size;
+      }
+      .text-2 {
+        font-size: $big-font-size;
+      }
+      .text-3 {
+        font-size: $h1-font-size;
+        & span {
+          font-size: $big-font-size;
+        }
+      }
+    }
   }
 
   .home__btns {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-top: 0.5rem;
   }
 }
