--- a/src/app/shared/components/contact/contact.component.html
+++ b/src/app/shared/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="contact container" id="contact">
+<section class="contact" id="contact">
   <h2 class="section__title">Contact Me</h2>
   <span class="section__subtitle">Get in touch</span>
   <div class="contact__container flex">
@@ -40,15 +40,15 @@
         </div>
       </div>
     </div>
-    <form action="" class="contact__form grid">
+    <form novalidate [formGroup]="userForm" (ngSubmit)="onSubmit()" class="contact__form grid">
       <div class="contact__inputs grid">
         <div class="contact__content">
           <label for="name" class="contact__label">Name</label>
-          <input type="text" class="contact__input" name="name" id="name" />
+          <input type="text" class="contact__input" formControlName="name" name="name" id="name" required />
         </div>
         <div class="contact__content">
           <label for="email" class="contact__label">Email</label>
-          <input type="email" class="contact__input" name="email" id="email" />
+          <input type="email" class="contact__input" formControlName="email" name="email" id="email"  required />
         </div>
         <div class="contact__content">
           <label for="message" class="contact__label">Message</label>
@@ -58,10 +58,12 @@
             cols="0"
             rows="7"
             class="contact__input resizeNone"
+            formControlName="message"
+            required
           ></textarea>
         </div>
         <div>
-          <a href="javascript:void(0)" (click)='submit()' class="contact__form-button button--flex">
+          <button type="submit" class="contact__form-button button--flex">
             <p>Send Message</p>
             <i class="button__icon"
               ><img
@@ -69,7 +71,7 @@
                 alt=""
                 class="contact__form-icon"
             /></i>
-          </a>
+          </button>
         </div>
       </div>
     </form>
