--- a/src/app/shared/components/skills/skills.component.scss
+++ b/src/app/shared/components/skills/skills.component.scss
@@ -167,6 +167,16 @@ section .title::after {
   }
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 .myskills__carousel {
   width: calc(100% / 3);
   /* overflow: hidden; */
