--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,10 +4,10 @@
         <p>© 2022 Lodola Tomas - All Rights Reserved</p>
     </div>
     <div class="footer__social">
-        <a rel="https://www.instagram.com/tomaslodola" target="_blank">
+        <a href="{{intagramLink}}" target="_blank">
             <img src="../../../../assets/icons/instagram.svg" class="footer__social-img" alt="instagram Tomas Lodola">
         </a>
-        <a rel="https://www.linkedin.com/in/tomas-l-b76423173/" target="_blank">
+        <a href="{{linkedinLink}}" target="_blank">
             <img src="../../../../assets/icons/linkedin.svg" class="footer__social-img" alt="facebook Tomas Lodola">
         </a>
     </div>
