--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,6 +5,7 @@
   position: fixed;
   width: 100%;
   top: 0;
+  background-color: $background-color;
   box-shadow: 0px 2px 4px rgba(255, 255, 255, 0.25);
   nav {
     padding-top: 1.0625rem;
