--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,21 @@
 body {
   margin: 0 !important;
   padding: 0 !important;
-  font-family: "Ubuntu", sans-serif;
+  font-family: $font-family;
   line-height: 1.3;
   font-size: 1.125rem;
   background-color: $background-color;
   &.no-scroll {
     overflow: hidden;
+  }
+  .swal2-popup {
+    font-family:$font-family;
+    font-size: $normal-font-size;
+    background-color: #5271ff !important;
+    color: $color-secondary !important;
+  }
+  .swal2-timer-progress-bar{
+    background-color: $color-secondary !important;
   }
 }
 
