--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1,6 +1,7 @@
 @import "/src/styles.scss";
 /* home section styling */
 .home {
+  padding: .5rem;
   display: flex;
   height: 100vh;
   color: #fff;
