--- a/src/app/shared/components/skills/skills.component.html
+++ b/src/app/shared/components/skills/skills.component.html
@@ -123,8 +123,8 @@
                                 *ngIf="item.title === 'Back-end'"
                               >
                                 <img
-                                  [src]="item.php"
-                                  alt="php logo"
+                                  [src]="item.java"
+                                  alt="java logo"
                                   class="image"
                                 />
                               </div>
