--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -14,6 +14,7 @@
     color: $color-secondary;
   }
   &__logo {
+    margin: .5rem;
     p {
       font-weight: $font-weight-Bold;
       span {
@@ -22,6 +23,7 @@
     }
   }
   &__burger {
+    margin: .5rem;
     cursor: pointer;
     > span {
       display: block;
@@ -51,6 +53,7 @@
 
   &__links {
     a {
+      cursor: pointer;
       position: relative;
       color: $color-secondary;
       &:not(:last-child) {
@@ -87,6 +90,7 @@
     background: $color-primary;
     padding: 1.625rem;
     a {
+      cursor: pointer;
       color: $color-secondary;
       padding: 0.625rem;
       display: block;
