--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -85,33 +85,46 @@ a, a:visited, a:hover {
 }
 
 
-
-.container {
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
   width: 100%;
-  padding-left: $mb-0-5;
-  padding-right: $mb-0-5;
+  padding-right: var( 0.75rem, 0.75rem);
+  padding-left: var( 0.75rem, 0.75rem);
   margin-right: auto;
   margin-left: auto;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-    margin: 0 auto !important;
+@media (min-width: 576px) {
+  .container-sm, .container {
+    max-width: 540px;
   }
 }
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-    margin: 0 auto !important;
+@media (min-width: 768px) {
+  .container-md, .container-sm, .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container-lg, .container-md, .container-sm, .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 1140px;
   }
 }
 @media (min-width: 1400px) {
-  .container {
-    max-width: 1400px;
-    margin: 0 auto !important;
+  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
+    max-width: 1320px;
   }
 }
+
 
 /* Reusable css Classes */
 
@@ -168,451 +181,14 @@ a, a:visited, a:hover {
 
 .hide-for-mobile{
   // hide for tablet and mobile
-  @include breakpoint-down(medium) {
+  @include breakpoint-down(large) {
     display: none;
   }
 }
 
 .hide-for-desktop{
   // hide for desktop viewport width
-  @include breakpoint-up(medium) {
+  @include breakpoint-up(large) {
     display: none;
   }
 }
-
-
-// .button1 {
-//   background: $color-primary;
-//   color: #fff;
-// }
-// .button2:hover {
-//   background: $color-primary;
-//   color: #fff;
-// }
-// .button1:hover {
-//   color: #fff;
-//   background: none;
-// }
-
-// /* home section styling */
-// .home {
-//   display: flex;
-//   height: 100vh;
-//   color: #fff;
-//   min-height: 500px;
-//   .max-width {
-//     width: 100%;
-//     display: flex;
-//   }
-//   .home-content .text-1 {
-//     font-family: $font-weight-Regular;
-//     font-size: $big-font-size;
-//   }
-//   .home-content .text-2 {
-//     font-size: $very-big-font-size;
-//     font-weight: $font-weight-Bold;
-//     margin-left: -3px;
-//   }
-//   .home-content .text-3 {
-//     font-size: $big-font-size;
-//     font-weight: $font-weight-Regular;
-//     margin: 5px 0;
-//   }
-//   .home-content .text-3 span {
-//     color: $color-primary;
-//     font-weight: $font-weight-Regular;
-//     font-size: $big-font-size;
-//   }
-//   .home__btns {
-//     margin-top: $mb-1-5;
-//     width: 320px;
-//     display: flex;
-//     justify-content: space-between;
-//     a {
-//       display: inline-block;
-//       color: #fff;
-//       font-size: $normal-font-size;
-//       font-weight: $font-weight-Regular;
-//       padding: 12px 36px;
-//       margin-top: $mb-0-75;
-//       font-weight: 400;
-//       border-radius: 40px;
-//       border: 2px solid $color-primary;
-//       transition: all 0.3s ease;
-//     }
-//   }
-// }
-
-// section .title {
-//   position: relative;
-//   text-align: center;
-//   font-size: 40px;
-//   margin-bottom: 60px;
-//   padding-bottom: 20px;
-// }
-// /* about section styling */
-// .about .about-content {
-//   display: flex;
-// }
-// section .title::before {
-//   content: "";
-//   position: absolute;
-//   bottom: 0px;
-//   left: 50%;
-//   width: 180px;
-//   height: 3px;
-//   background: #ffffff;
-//   transform: translateX(-50%);
-// }
-// section .title::after {
-//   position: absolute;
-//   bottom: -8px;
-//   left: 50%;
-//   font-size: 20px;
-//   color: $color-primary;
-//   padding: 0 5px;
-//   background: $background-color;
-//   transform: translateX(-50%);
-// }
-
-// .about {
-//   .about-content {
-//     display: flex;
-//     flex-wrap: wrap;
-//     align-items: center;
-//     justify-content: space-evenly;
-//   }
-//   .title {
-//     text-transform: capitalize;
-//     z-index: -1;
-//     font-weight: $font-weight-Regular;
-//     font-size: $very-big-font-size;
-//   }
-//   .title::after {
-//     font-weight: $font-weight-Regular;
-//     font-size: $h2-font-size;
-//     content: "who I am";
-//   }
-//   .about-content .left {
-//     width: 400px;
-//   }
-//   .about-content .left img {
-//     height: 400px;
-//     width: 400px;
-//     object-fit: cover;
-//     border-radius: 10px;
-//   }
-//   .about-content .right {
-//     width: 600px;
-//   }
-//   .about-content .right .text {
-//     font-weight: $font-weight-Regular;
-//     font-size: $big-font-size;
-//     font-weight: 600;
-//     margin-bottom: 10px;
-//   }
-//   .about-content .right .text span {
-//     color: $color-primary;
-//   }
-//   .about-content .right p {
-//     line-height: 25px;
-//     text-align: justify;
-//     font-weight: $font-weight-Light;
-//     font-size: $h2-font-size;
-//   }
-//   .about__buttons {
-//     display: flex;
-//     justify-content: center;
-//     .about__btns {
-//       margin-top: $mb-1-5;
-//       width: 320px;
-//       display: flex;
-//       justify-content: space-between;
-//       a {
-//         display: inline-block;
-//         color: #fff;
-//         font-size: $normal-font-size;
-//         font-weight: $font-weight-Regular;
-//         padding: 12px 36px;
-//         margin-top: $mb-0-75;
-//         font-weight: 400;
-//         border-radius: 40px;
-//         border: 2px solid $color-primary;
-//         transition: all 0.3s ease;
-//       }
-//     }
-//   }
-// }
-
-// .skills {
-//   height: 100vh;
-//   .skills__list {
-//     display: flex;
-//     flex-wrap: wrap;
-//     justify-content: center;
-//     font-weight: $font-weight-Regular;
-//     font-size: $h1-font-size;
-//     ul {
-//       display: flex;
-//       flex-wrap: wrap;
-//       align-items: center;
-//       justify-content: space-evenly;
-//       li {
-//         display: inline-block;
-//         margin: $mb-1-5;
-//         .active {
-//           color: $color-primary;
-//         }
-//       }
-//     }
-//   }
-
-//   .skills__carrousel {
-//     width: 100%;
-//     max-width: 120em;
-//     overflow: hidden;
-//   }
-
-//   .skills__content {
-//     width: 300%;
-//     display: flex;
-//     flex-flow: row nowrap;
-//     justify-content: space-between;
-//     align-items: center;
-//     transition: all 0.5s ease-in-out;
-//     transform: translatex(0%);
-//     overflow: hidden;
-//   }
-//   .skills__content-section {
-//     width: calc(100% / 3);
-//   }
-//   .skills__content-list-item {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     width: 100%;
-//     height: 500px;
-//     .skills__content-list-item-options {
-//       margin: auto;
-//       display: flex;
-//       flex-direction: row;
-//       justify-content: space-between;
-//       align-items: center;
-//       width: 100%;
-//       h3 {
-//         text-align: center;
-//         margin: 30px 0 30px 0;
-//         font-weight: $font-weight-Regular;
-//         font-size: $h2-font-size;
-//         width: 15%;
-//         white-space: nowrap;
-//       }
-//     }
-//     .skills__content-list-item-content {
-//       width: 80%;
-//       height: 500px;
-//       h3 {
-//         margin: 30px 0 30px 0;
-//         font-weight: $font-weight-Regular;
-//         font-size: $h2-font-size;
-//       }
-//       ul {
-//         display: grid;
-//         justify-items: center;
-//         width: 100%;
-//         align-content: center;
-//         justify-content: center;
-//       }
-//       .two-skills {
-//         grid-template-columns: 1fr 1fr 1fr;
-//       }
-//       .one-skills {
-//         grid-template-columns: 1fr 1fr 1fr 1fr;
-//       }
-//     }
-//   }
-// }
-// .next {
-//   transform: rotate(180deg);
-// }
-// .myskills__carousel {
-//   width: calc(100% / 3);
-//   height: 500px;
-//   /* overflow: hidden; */
-// }
-// .myskills__carousel-big {
-//   height: 300%;
-//   background-color: lightblue;
-//   transition: all 0.5s ease-in-out;
-//   transform: translateY(0%);
-// }
-
-// .skills__content-list-item-rows {
-//   left: 60px;
-//   display: flex;
-//   position: absolute;
-//   flex-direction: column;
-//   top: 34%;
-//   height: 33.3333%;
-//   width: 50px;
-//   z-index: 100;
-//   justify-content: space-between;
-//   align-items: center;
-//   align-content: space-between;
-// }
-
-// .image {
-//   display: inline-block;
-//   width: 150px;
-//   height: 150px;
-//   object-fit: contain;
-//   margin: 40px;
-//   filter: grayscale(1);
-//   transition: all 0.3s ease-in-out;
-//   cursor: pointer;
-//   &:hover {
-//     filter: grayscale(0);
-//   }
-// }
-
-// .qualification_data {
-//   display: grid;
-//   grid-template-columns: 1fr max-content 1fr;
-//   grid-column-gap: 1.5rem;
-//   column-gap: 1.5rem;
-//   justify-items: center;
-// }
-// .qualification_title {
-//   font-weight: $font-weight-Regular;
-//   font-size: $h2-font-size;
-// }
-
-// .qualification_subtitle {
-//   display: inline-block;
-//   font-weight: $font-weight-Light;
-//   font-size: $h3-font-size;
-//   margin-bottom: $mb-1;
-// }
-
-// .qualification_calendar {
-//   font-size: $normal-font-size;
-//   color: lightgray;
-// }
-
-// .qualification__rounder {
-//   display: inline-block;
-//   width: 15px;
-//   height: 15px;
-//   border-radius: 50%;
-//   background-color: $color-primary;
-// }
-
-// .qualification__line {
-//   display: block;
-//   width: 2px;
-//   height: 100%;
-//   background-color: $color-primary;
-//   transform: translate(6px, -7px);
-// }
-// .qualification__data-right {
-//   width: 100%;
-//   display: flex;
-//   justify-content: flex-end;
-// }
-// .qualification__data-left {
-//   width: 100%;
-//   display: flex;
-//   justify-content: flex-start;
-// }
-
-// .qualification_calendar img {
-//   width: 20px;
-//   height: 20px;
-//   margin-right: 5px;
-// }
-
-// .contact__container {
-//   font-weight: $font-weight-Regular;
-//   row-gap: 3rem;
-//   grid-template-columns: repeat(2, 1fr);
-//   .contact__information {
-//     display: flex;
-//     margin-bottom: $mb-2;
-//   }
-// }
-// .contact__icon {
-//   width: 2rem;
-//   height: 2rem;
-//   font-size: 2rem;
-//   color: $color-primary;
-//   margin-right: $mb-0-75;
-// }
-
-// .contact__title {
-//   font-size: $h2-font-size;
-//   font-weight: $font-weight-Regular;
-// }
-
-// .contact__subtitle {
-//   font-size: $h3-font-size;
-//   color: $color-primary;
-// }
-
-// .contact__content {
-//   background-color: $input-color;
-//   border-radius: 0.5rem;
-//   padding: 0.75rem 1rem 0.25rem;
-// }
-
-// .contact__label {
-//   font-weight: $font-weight-Regular;
-//   font-size: $h3-font-size;
-//   color: $background-color;
-// }
-
-// .contact__input {
-//   width: 100%;
-//   background-color: $input-color;
-//   color: $text-color;
-//   font-weight: $font-weight-Light;
-//   font-size: $normal-font-size;
-//   border: none;
-//   outline: none;
-//   padding: 0.25rem 0.5rem 0.5rem 0;
-// }
-// .contact__form-button {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   color: $color-primary;
-//   font-size: 0.938rem;
-//   font-family: "Ubuntu-Medium", sans-serif;
-//   padding: 12px 36px;
-//   margin-top: 0.75rem;
-//   font-weight: 400;
-//   border-radius: 40px;
-//   border: 2px solid #5271ff;
-//   transition: all 0.3s ease-out;
-//   &:hover {
-//     background: $color-primary;
-//     color: $color-secondary;
-//     img {
-//       filter: brightness(500%);
-//     }
-//   }
-
-//   p {
-//     display: inline-block;
-//     font-size: 1.125rem;
-//   }
-//   .contact__form-icon {
-//     width: 20px;
-//     margin-top: 7px;
-//     height: 100%;
-//     margin-left: 0.225rem;
-//   }
-// }
-
-// .resizeNone {
-//   resize: none;
-// }
