--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
   line-height: 1.3;
   font-size: 1.125rem;
   background-color: $background-color;
+  
   &.no-scroll {
     overflow: hidden;
   }
@@ -20,3 +21,14 @@ body {
   }
 }
 
+body::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #5271ff;
+}
