--- a/src/app/shared/components/projects/projects.component.scss
+++ b/src/app/shared/components/projects/projects.component.scss
@@ -1,49 +1,19 @@
 @import "/src/styles.scss";
-.img-hold{
-  position: absolute;
-  margin: auto;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  height: 200px;
-  width: 200px;
-  z-index: 1;
-  transition: animation 2s ease-in-out;
-  animation: slide-left 2s ;
-  animation-fill-mode: backwards;
-  animation-iteration-count: infinite;
-}
-.display-none{
-  display: none;
-}
-
-@keyframes slide-left {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(-100px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
 
 drag-scroll {
   width: 100%;
-  height: 500px;
+  overflow-y: hidden;
+  
+  /* height: 500px; */
   -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none; 
 }
+
 .projects{
   position: relative;
   padding-top: 200px;
-}
-.overflow-x-hidden {
-  overflow-x: hidden !important;
 }
 
 .projects__title{
