--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,14 +21,15 @@ body {
   }
 }
 
-body::-webkit-scrollbar {
-  width: 0.7rem;
+*::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: #1e1e24;
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: #5271ff;
 }
