add smooth scroll and remove ngx-page-scroll

--- a/src/app/shared/components/projects/projects.component.html
+++ b/src/app/shared/components/projects/projects.component.html
@@ -11,6 +11,11 @@
             <p>Freelance Web development</p>
             <h3>Estudio Contable</h3>
         </div>
+        <div drag-scroll-item class="projects__card" (click)="redirecTo('rickandmorty')">
+            <img src="../../../../assets/images/rickandmorty.svg" alt="">
+            <p>Web development</p>
+            <h3>Rick and Morty with Graphql</h3>
+        </div>
         <div drag-scroll-item class="projects__card" (click)="redirecTo('repairService')">
             <img src="../../../../assets/images/repairService.svg" alt="">
             <p>Web development</p>
