--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -15,6 +15,8 @@
   }
   &__logo {
     margin: .5rem;
+    text-decoration: none;
+    color: #fff;
     p {
       font-weight: $font-weight-Bold;
       span {
